# buck2_buildbuddy

./: .buckconfig  Cargo.toml  README.md  log.json  proto_defs.bzl  reindeer.toml  rust-project.json
.github/workflows/: ci.yml
buck2bes/: BUCK  Cargo.toml  build.rs
buck2bes/src/: client.rs  lib.rs  main.rs  proto.rs  testlog.pb.zst  translate.rs
buck2bes_proto/: BUCK  build.rs
buck2bes_proto/src/: lib.rs
proto/: BUCK
proto/bes/: analysis_cache_service_metadata_status.proto  build_event_stream.proto  invocation_policy.proto
proto/bes_service/: build_events.proto  publish_build_event.proto
toolchains/: BUCK
