[package]
name = "buck2bes"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "_main"
path = "_main.rs"

[dependencies]
prost = "0.14"
prost-build = "0.14"
prost-types = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tonic = { version = "0.14", default-features = false, features = ["channel", "codegen"] }
# aws-lc-sys = "0.37.1"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
    # zstd = "0.13.0"
